@@ -32,8 +32,10 @@ Changes in backwards compatibility policy
 
 ======================= Lucene 4.2.0 =======================
 
-(No changes yet)
+API Changes
 
+* LUCENE-4684: Made DirectSpellChecker extendable.
+  (Martijn van Groningen)
 
 ======================= Lucene 4.1.0 =======================
 
